[package]
name = "liquidity-depth-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
# Tycho dependencies
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation" }
tycho-common = "0.70.5"
tycho-client = { git = "https://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client" }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
num-bigint = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0.98"
tracing-appender = "0.2.3"
